syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customers {
  // Sends a greeting
  rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
  rpc GetNewCustomers (NewCustomerRequest)  returns ( stream CustomerModel);
}

// The request message containing the user's name.
message CustomerLookupModel {
  int32 userId = 1;
}

message NewCustomerRequest {
}

// The response message containing the greetings.
message CustomerModel {
  string firstName = 1;
  string lastName = 2;
  string emailAddress = 3;
  bool isAlive = 4;
  int32 age= 5;
}