syntax = "proto3";

option csharp_namespace = "Grpc.Contracts";
import "Protos/weather.proto";
package grpc.contracts;

message PincodeRequest {
  string city = 1;
}

message PincodeResponse  {
  string city = 1;
  string pincode = 2;
  WeatherResponse WeatherResponse = 3;
}